--- a/app/views/contentcolumns/twocolumn.scala.html
+++ b/app/views/contentcolumns/twocolumn.scala.html
@@ -1,4 +1,10 @@
-@(urlTitle: String, menuHeader: String = "", menuList: List[models.content.MenuItem] = Nil, column1Header: String = "", column1Body: String = "", column2Header: String = "", column2Body: String = "")(implicit request: RequestHeader)
+@(urlTitle: String,
+        menuHeader: String = "",
+        menuList: Option[List[models.viewmodels.MenuItem]] = None,
+        column1Header: String = "",
+        column1Body: String = "",
+        column2Header: String = "",
+        column2Body: String = "")(implicit request: RequestHeader)
 
 @main(urlTitle) {
 
