--- a/app/views/contentcolumns/onecolumn.scala.html
+++ b/app/views/contentcolumns/onecolumn.scala.html
@@ -1,4 +1,9 @@
-@(urlTitle: String, menuHeader: String = "", menuList: List[models.content.MenuItem] = Nil, column1Header: String = "", column1Body: String = "")(implicit request: RequestHeader)
+@(urlTitle: String,
+        menuHeader: String = "",
+        menuList: Option[List[models.viewmodels.MenuItem]] = None,
+        column1Header: String = "",
+        column1PreAmble: String = "",
+        column1Body: String = "")(implicit request: RequestHeader)
 
 @main(urlTitle) {
 
@@ -8,7 +13,8 @@
                 <div class="row">
                     <div class="col-xs-12 pull-right @if(menuList.isEmpty){col-md-12}else{col-md-9}">
                         @if(!column1Header.isEmpty){ <h1 class="page-header">@column1Header</h1> }
-                        @if(!column1Body.isEmpty){ <div class="content-body">@column1Body</div> }
+                        @if(!column1PreAmble.isEmpty){ <div class="lead">@Html(column1PreAmble)</div> }
+                        @if(!column1Body.isEmpty){ <div class="content-body">@Html(column1Body)</div> }
                     </div>
                     @contentcolumns.columnitems.menu(asideHeader = menuHeader, asideMenu = menuList)
                 </div>
