--- a/app/views/admin/recipe/add.scala.html
+++ b/app/views/admin/recipe/add.scala.html
@@ -1,4 +1,4 @@
-@(recipeForm: Form[models.viewmodels.RecipeForm])(implicit flash: Flash)
+@(recipeForm: Form[models.viewmodels.RecipeForm], editingRecipe: Option[models.Recipe] = None)(implicit flash: Flash)
 @import helper.twitterBootstrap._
 
 @mainedit(Messages("admin.title")){
@@ -10,11 +10,13 @@
                 <fieldset>
                     @helper.inputText(recipeForm("recipename"), '_label -> Messages("admin.recipe.add.name"), '_help -> Messages("admin.recipe.add.name.validation"))
                     @helper.textarea(recipeForm("recipepreamble"), '_label -> Messages("admin.recipe.add.preamble"), '_help -> Messages("admin.recipe.add.preamble.validation"), '_class -> "recipe-addedit-form-preamble")
-                    @helper.inputFile(recipeForm("recipemainimage"), '_label -> Messages("admin.recipe.add.mainimage"))
-                    @helper.inputFile(recipeForm("recipeimage01"), '_label -> Messages("admin.recipe.add.image"))
-                    @helper.inputFile(recipeForm("recipeimage02"), '_label -> Messages("admin.recipe.add.image"))
-                    @helper.inputFile(recipeForm("recipeimage03"), '_label -> Messages("admin.recipe.add.image"))
-                    @helper.inputFile(recipeForm("recipeimage04"), '_label -> Messages("admin.recipe.add.image"))
+                    @if(editingRecipe.isDefined && editingRecipe.get.getMainImage != null) {
+                        <div class="alert alert-info">@editingRecipe.get.getMainImage.name - @Messages("recipe.edit.add.main-image.existing")</div>
+                    }
+                    @helper.inputFile(recipeForm("recipeimage1"), '_label -> Messages("recipe.edit.add.image", "1"))
+                    @helper.inputFile(recipeForm("recipeimage2"), '_label -> Messages("recipe.edit.add.image", "2"))
+                    @helper.inputFile(recipeForm("recipeimage3"), '_label -> Messages("recipe.edit.add.image", "3"))
+                    @helper.inputFile(recipeForm("recipeimage4"), '_label -> Messages("recipe.edit.add.image", "4"))
                     @helper.textarea(recipeForm("recipebody"), '_label -> Messages("admin.recipe.add.body"), 'class -> "richtext")
                     @helper.inputHidden(recipeForm("receipeid"))
                 </fieldset>
