- Beta-Ribbon now works correctly in Safari responsive

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1297,9 +1297,13 @@ input[type="reset"]:hover
   }
   .ribbon
   {
-    left:15px;
+    left:6px;
     top:46px;
     transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
   }
   .ribbon a
   {
