--- a/app/views/admin/recipe/add.scala.html
+++ b/app/views/admin/recipe/add.scala.html
@@ -1,4 +1,4 @@
-@(recipeForm: Form[models.viewmodels.RecipeForm], editingRecipe: Option[models.Recipe] = None)(implicit flash: Flash)
+@(recipeForm: Form[models.viewmodels.RecipeForm], editingRecipe: Option[models.Recipe] = None, sortedImages: Option[List[models.files.ContentFile]] = None)(implicit flash: Flash)
 @import helper.twitterBootstrap._
 
 @mainedit(Messages("admin.title")){
@@ -10,13 +10,26 @@
                 <fieldset>
                     @helper.inputText(recipeForm("recipename"), '_label -> Messages("admin.recipe.add.name"), '_help -> Messages("admin.recipe.add.name.validation"))
                     @helper.textarea(recipeForm("recipepreamble"), '_label -> Messages("admin.recipe.add.preamble"), '_help -> Messages("admin.recipe.add.preamble.validation"), '_class -> "recipe-addedit-form-preamble")
-                    @if(editingRecipe.isDefined && editingRecipe.get.getMainImage != null) {
-                        <div class="alert alert-info">@editingRecipe.get.getMainImage.name - @Messages("recipe.edit.add.main-image.existing")</div>
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            @helper.inputFile(recipeForm("recipemainimage"), '_label -> Messages("admin.recipe.add.main-image"))
+                            @if(editingRecipe.isDefined && editingRecipe.get.getMainImage != null) {
+                                @shared.img(editingRecipe.get.getMainImage.getTransformByName("thumbnail").getUrl) - @Messages("admin.recipe.add.image.existing")
+                            }
+                        </div>
+                    </div>
+                    @defining(List(1,2,3,4,5)){ items =>
+                        @for(i <- items) {
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    @helper.inputFile(recipeForm("recipeimage" + i), '_label -> Messages("admin.recipe.add.image", i))
+                                    @if(sortedImages.isDefined && sortedImages.get.isDefinedAt(i)) {
+                                        @shared.img(sortedImages.get(i).getTransformByName("thumbnail").getUrl) - @Messages("admin.recipe.add.image.existing")
+                                    }
+                                </div>
+                            </div>
+                        }
                     }
-                    @helper.inputFile(recipeForm("recipeimage1"), '_label -> Messages("recipe.edit.add.image", "1"))
-                    @helper.inputFile(recipeForm("recipeimage2"), '_label -> Messages("recipe.edit.add.image", "2"))
-                    @helper.inputFile(recipeForm("recipeimage3"), '_label -> Messages("recipe.edit.add.image", "3"))
-                    @helper.inputFile(recipeForm("recipeimage4"), '_label -> Messages("recipe.edit.add.image", "4"))
                     @helper.textarea(recipeForm("recipebody"), '_label -> Messages("admin.recipe.add.body"), 'class -> "richtext")
                     @helper.inputHidden(recipeForm("receipeid"))
                 </fieldset>
