--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -1,5 +1,7 @@
 @(EnvDataForm: Form[controllers.EnvData],
-        optionsLocationAreas: Option[Seq[(String,String)]] = None)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie)
+        optionsLocationAreas: Option[Seq[(String,String)]] = None,
+        editingProfile: Option[UserProfile] = None)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie)
+@import helper.twitterBootstrap._
 
 @main(Messages("profile.title")){
 
@@ -25,7 +27,7 @@
                 }
 
 
-                @helper.form(action = routes.UserProfileController.editSubmit()) {
+                @helper.form(action = routes.UserProfileController.editSubmit(), 'enctype -> "multipart/form-data") {
                 <div class="panel panel-default">
                     <div class="panel-heading">@Messages("profile.create.header.user")</div>
                     <div class="panel-body">
@@ -38,18 +40,17 @@
                                     'id -> "name",
                                     '_showErrors -> true,
                                     '_label -> Messages("profile.create.form.profilename"),
-                                    '_help -> (Html(Messages("profile.create.form.profilename.help")),
+                                    '_help -> Messages("profile.create.form.profilename.required"),
                                     '_error -> EnvDataForm.error("name")
-                                    )
                                 )
+                                <div class="alert alert-info">@Html(Messages("profile.create.form.profilename.help"))</div>
 
                                 @helper.inputHidden(EnvDataForm("name2"),
                                     'id -> "name",
                                     '_showErrors -> true,
                                     '_label -> Messages("profile.create.form.profilename"),
-                                    '_help -> (Html(Messages("profile.create.form.profilename.help")),
-                                            '_error -> EnvDataForm.error("name")
-                                            )
+                                    '_help -> "",
+                                    '_error -> EnvDataForm.error("name")
                                 )
                             </li>
 
@@ -65,6 +66,18 @@
                                     '_help -> Messages("profile.create.form.aboutmeheadline.help"),
                                     '_error -> EnvDataForm.error("aboutmeheadline")
                                 )
+
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                        @helper.inputFile(EnvDataForm("avatarimage"), '_label -> Messages("profile.create.form.avatar-image"))
+                                        @if(editingProfile.isDefined && editingProfile.get.getAvatarImage != null) {
+                                            @shared.hostImageCircle(editingProfile.get.getAvatarImage.getTransformByName("thumbnail").getUrl) - @Messages("profile.create.form.avatar-image.existing")
+                                        }else{
+                                            @shared.hostImageCircle
+                                        }
+                                    </div>
+                                </div>
+
 
                                 @helper.textarea(EnvDataForm("aboutme"),
                                     'id -> "aboutme",
@@ -116,6 +129,14 @@
                                     )
                                 }
 
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                        @helper.inputFile(EnvDataForm("mainimage"), '_label -> Messages("profile.create.form.main-image"))
+                                        @if(editingProfile.isDefined && editingProfile.get.getMainImage != null) {
+                                            @shared.img(editingProfile.get.getMainImage.getTransformByName("thumbnail").getUrl) - @Messages("profile.create.form.main-image.existing")
+                                        }
+                                    </div>
+                                </div>
 
                             </li>
                         </ul>
